# figura

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  index.html  manifest.json  package.json  pyproject.toml
.github/workflows/: validate.yml
diagrams/effects-sampler/: effects-sampler.html
diagrams/inference-containers/: engine-comparison.html  llama-cpu-build-pipeline.html  llama-cpu-entrypoint-flow.html  llama-gpu-entrypoint-flow.html  llama-gpu-stage-split.html  vllm-build-vs-wheel.html  vllm-entrypoint-flow.html
diagrams/inference-loop/: kv-cache-fill.html
diagrams/linux-ai-setup/: gpu-software-stack.html  setup-pipeline.html  storage-layout.html
diagrams/llm-training/: training-loop.html
diagrams/prefill-vs-decode/: attention-pattern.html
diagrams/sandboxing/: agent-egress-flow.html  comparison-grid.html  inference-topology.html  training-job-lifecycle.html
diagrams/transformer-architecture/: block-dataflow.html
diagrams/what-language-leaves-out/: agreement-distance.html  ambiguity-ladder.html  bridging-implicit.html  cataphora-order.html  code-binding.html  comparative-ellipsis.html  coordination-scope.html  coref-chain.html  definite-pick.html  deixis-chat.html  delimiter-match.html  demonstrative-scope.html  (+37 more)
scripts/: build.js  migrate.js  new-diagram.js  validate.js
shared/: effects.css  preview.css  snippets.js  tokens.css
slidegen/: __init__.py  browser.py  cli.py  doctor.py  encode.py  render.py  validate.py
templates/: ambient.html  hover-inspect.html  step-timeline.html
tests/: test_timedriver.py
theme/: spec.md  theme.css
(+10 files in other folders)
