[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slidegen"
version = "0.1.0"
description = "Animated slide generator: HTML/CSS slides rendered to looping GIFs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "playwright>=1.45",
    "pillow>=10.0",
    "scikit-image>=0.22",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
slidegen = "slidegen.cli:app"

[tool.setuptools.packages.find]
include = ["slidegen*"]
